# serenity-fork

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/e01_basic_ping_bot/: Cargo.toml
examples/e02_transparent_guild_sharding/: Cargo.toml
examples/e03_struct_utilities/: Cargo.toml
examples/e04_message_builder/: Cargo.toml
examples/e05_sample_bot_structure/: Cargo.toml
examples/e06_env_logging/: Cargo.toml
examples/e07_shard_manager/: Cargo.toml
examples/e07_shard_manager/src/: main.rs
examples/e08_create_message_builder/: Cargo.toml
examples/e08_create_message_builder/src/: main.rs
examples/e09_collectors/: Cargo.toml
examples/e10_gateway_intents/: Cargo.toml
examples/e11_global_data/: Cargo.toml
examples/e11_global_data/src/: main.rs
examples/e12_parallel_loops/: Cargo.toml
examples/e13_sqlite_database/: Cargo.toml
examples/e14_message_components/: Cargo.toml
examples/e15_webhook/: Cargo.toml
examples/e16_interactions_endpoint/: Cargo.toml
src/: error.rs  lib.rs  prelude.rs  secrets.rs
src/builder/: create_allowed_mentions.rs  edit_guild_welcome_screen.rs
src/cache/: mod.rs  wrappers.rs
src/collector/: mod.rs  quick_modal.rs
src/gateway/: shard.rs  ws.rs
src/gateway/client/: context.rs  mod.rs
src/gateway/sharding/: mod.rs  shard_manager.rs  (+4 more)
src/http/: client.rs  ratelimiting.rs  request.rs  typing.rs
src/internal/: tokio.rs
src/model/: error.rs  event.rs  invite.rs  mention.rs  mod.rs  timestamp.rs  voice.rs
src/utils/: content_safe.rs  formatted_timestamp.rs  message_builder.rs
(+9 files in other folders)
