[package]
name = "e01_basic_ping_bot"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition.workspace = true

[dependencies]
serenity = { path = "../../", default-features = false, features = ["gateway", "model", "rustls_backend"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
